--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     </nav>
 
     <header>
-        <div class="header-content">
-            <div class="header-content-inner">
+        <div class="cover-content">
+            <div class="cover-content-inner">
                 <h1>Hi, I'm Tanner Moss</h1>
                 <hr>
                 <p>Software Engineering Student</p>
