--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">We've got what you need!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed my first work term for co-op and am currently seeking a position for 4-16 monthes. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
+                    <a href="#" class="btn btn-default btn-xl">Download Resume</a>
                 </div>
             </div>
         </div>
@@ -147,10 +147,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Space Invaders
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Developed an original space invaders game by creating a customer processor to run on the Altera DE2 board
                                 </div>
                             </div>
                         </div>
@@ -162,10 +162,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Atari Pong Game
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Created the classic pong game using VHDL on the DE2 board.  We used the swithces for player movement and kept score using the LED's
                                 </div>
                             </div>
                         </div>
@@ -177,10 +177,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Electromagnetic Tether Robot
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Made a robot tethered to a controller by measuring electromagnetic waves using C++ progrmmed onto an LP51B board
                                 </div>
                             </div>
                         </div>
@@ -192,10 +192,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Telephone Game App
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Designed a user-friendly memory game for Android using the DE2 as a hub to send messages to the devices, up to 20 players per lobby
                                 </div>
                             </div>
                         </div>
@@ -207,10 +207,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Hotel Review Database
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Created a fully functioning hotel booking and review database system using SQL and oracle
                                 </div>
                             </div>
                         </div>
@@ -222,10 +222,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Pacman Game
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Extended a bare-bones version of Pacman in java to include additional features such as undo, save and load buttons
                                 </div>
                             </div>
                         </div>
