--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Let's work together!!</h2>
                     <hr class="light">
                     <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed my first work term for co-op and am currently seeking a position for 4-16 monthes. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
                     <a href="#" class="btn btn-default btn-xl">Download Resume</a>
