--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
                     <h2 class="section-heading">Let's work together!!</h2>
                     <hr class="light">
                     <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed my first work term for co-op and am currently seeking a position for 4-16 monthes. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
-                    <a href="#" class="btn btn-default btn-xl">Download Resume</a>
                 </div>
             </div>
         </div>
@@ -236,12 +235,36 @@
     </section>
 
     <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-4 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                        <h3>Programming</h3>
+                        <p class="text-muted">My passsion! I love solving complex problems.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Databases</h3>
+                        <p class="text-muted">SELECT Tanner AS Employee FROM Applicants</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Tools</h3>
+                        <p class="text-muted">Eclipse, Visual Studios, Bootstrap and more!</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <h3>Fundamentals</h3>
+                        <p class="text-muted">Solid understanding of OOP and data structures.</p>
+                    </div>
+                </div>
             </div>
-        </div>
     </aside>
 
     <section id="contact">
