--- a/index.html
+++ b/index.html
@@ -238,23 +238,20 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Programming</h3>
-                        <p class="text-muted">My passsion! I love solving complex problems.</p>
+                        <h3>UBC CS Department</h3>
+                        <p class="text-muted">Junior Technician</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Databases</h3>
-                        <p class="text-muted">SELECT Tanner AS Employee FROM Applicants</p>
+                        <h3>ZE PowerGroup</h3>
+                        <p class="text-muted">Application Support Analyst</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Tools</h3>
-                        <p class="text-muted">Eclipse, Visual Studios, Bootstrap and more!</p>
+                        <h3>Jomar Softcorp</h3>
+                        <p class="text-muted">Junior Developer</p>
                     </div>
                 </div>
             </div>
