--- a/index.html
+++ b/index.html
@@ -239,19 +239,20 @@
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <h3>UBC CS Department</h3>
-                        <p class="text-muted">Junior Technician</p>
+                        <p class="text-primary">Junior Technician</p>
+                        <dd>- Fixed servers</dd>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <h3>ZE PowerGroup</h3>
-                        <p class="text-muted">Application Support Analyst</p>
+                        <p class="text-success">Application Support Analyst</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <h3>Jomar Softcorp</h3>
-                        <p class="text-muted">Junior Developer</p>
+                        <p class="text-info">Junior Developer</p>
                     </div>
                 </div>
             </div>
