--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <h3>UBC CS Department</h3>
-                        <p class="text-primary">Junior Technician</p>
+                        <p class="text-primary" align="left">Junior Technician</p>
                         <dd>- Fixed servers</dd>
                     </div>
                 </div>
