Trying formatting changes

--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <h3>UBC CS Department</h3>
-                        <p class="text-primary" align="left">Junior Technician</p>
-                        <dd>- Fixed servers</dd>
+                        <p class="text-primary">Junior Technician</p>
+                        <dd align="left">- Fixed servers</dd>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
