--- a/index.html
+++ b/index.html
@@ -238,21 +238,26 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <h3>UBC CS Department</h3>
-                        <p class="text-primary">Junior Technician</p>
-                        <dd align="left">- Fixed servers</dd>
+                        <h3 class="text-primary">UBC CS Department</h3>
+                        <p>Junior Technician</p>
+                        <dd align="left">- Diagnosed server issues and network cables after a flood and collected results</dd>
+                        <dd align="left">- Fixed and replaced various parts of laptops, monitors, servers, soundboard etc.</dd>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <h3>ZE PowerGroup</h3>
-                        <p class="text-success">Application Support Analyst</p>
+                        <h3 class="text-success">ZE PowerGroup</h3>
+                        <p>Application Support Analyst</p>
+                        <dd align="left">- Found and resolved various bugs concerning data collection and validation</dd>
+                        <dd align="left">- Communicated efficiently with clients to provide fast solutions to their issues</dd>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <h3>Jomar Softcorp</h3>
-                        <p class="text-info">Junior Developer</p>
+                        <h3 class="text-info">Jomar Softcorp</h3>
+                        <p>Junior Developer</p>
+                        <dd align="left">- Rapidly design, program, test, and document new user requirements within a Java Servlet</dd>
+                        <dd align="left">- Developed modules of JOMAR's new Smart Meter product as well as maintain previous ERP systems</dd>
                     </div>
                 </div>
             </div>
