Minor update on information and format

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1>Hi I'm Tanner Moss</h1>
                 <hr>
-                <p>3rd Year Software Engineering Student at UBC</p>
+                <p>4th Year Software Engineering Student at UBC</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's work together!!</h2>
                     <hr class="light">
-                    <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed my first work term for co-op and am currently seeking a position for 4-16 monthes. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
+                    <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed 4 workterms and I am currently seeking a position for my last, 4 month, co-op term. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
                 </div>
             </div>
         </div>
@@ -269,15 +269,11 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                    <p>Looking for a summer co-op student? Hire me and let's create something great together!</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:tanner.moss@outlook.com">tanner.moss@outlook.com</a></p>
                 </div>
             </div>
         </div>
