--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Hi I'm Tanner Moss</h1>
+                <h1  style="color:#0000FF">Hi I'm Tanner Moss</h1>
                 <hr>
                 <p>4th Year Software Engineering Student at UBC</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
@@ -271,7 +271,7 @@
                     <hr class="primary">
                     <p>Looking for a summer co-op student? Hire me and let's create something great together!</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="mailto:tanner.moss@outlook.com">tanner.moss@outlook.com</a></p>
                 </div>
