--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1  style="color:#0000FF">Hi I'm Tanner Moss</h1>
+                <h1  style="color:#FFFFFF"><span style="background-color:#000000;">Hi I'm Tanner Moss</h1>
                 <hr>
                 <p>4th Year Software Engineering Student at UBC</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
