--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1  style="color:#FFFFFF"><span style="background-color:#0A122A;">Hi I'm Tanner Moss</span></h1>
                 <hr>
-                <p><span style="background-color:#0A122A;">4th Year Software Engineering Student at UBC</span></p>
+                <p><span style="background-color:#0A122A;">5th Year Software Engineering Student at UBC</span></p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's work together!!</h2>
                     <hr class="light">
-                    <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed 4 workterms and I am currently seeking a position for my last, 4 month, co-op term. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
+                    <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed all my co-op workterms, and now I am seeking a position for after I graduate in April 2017. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
                 </div>
             </div>
         </div>
@@ -238,10 +238,10 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <h3 class="text-primary">UBC CS Department</h3>
-                        <p>Junior Technician</p>
-                        <dd align="left">- Diagnosed server issues and network cables after a flood and collected results</dd>
-                        <dd align="left">- Fixed and replaced various parts of laptops, monitors, servers, soundboard etc.</dd>
+                        <h3 class="text-primary">Broadcom Limited</h3>
+                        <p>Application Software Co-op</p>
+                        <dd align="left">- Developed and fixed audio scripts for various phone platforms</dd>
+                        <dd align="left">- Diagnosed customer issues and tracked down bugs relating to their individual problems</dd>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
@@ -269,7 +269,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Looking for a summer co-op student? Hire me and let's create something great together!</p>
+                    <p>Looking for a passionate, newly graduated Software Developer? Hire me and let's create something great together!</p>
                 </div>
                 <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
