Update website with previous job

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1  style="color:#FFFFFF"><span style="background-color:#0A122A;">Hi I'm Tanner Moss</span></h1>
                 <hr>
-                <p><span style="background-color:#0A122A;">5th Year Software Engineering Student at UBC</span></p>
+                <p><span style="background-color:#0A122A;">Software Developer</span></p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's work together!!</h2>
                     <hr class="light">
-                    <p class="text-faded">I'm currently pursuing a degree in Computer Engineering, specializing in software and minoring in commerece. I became passionate about coding after I took a programming course in my first year. I love creating user-friendly solutions and learning about new technologies. I've completed all my co-op workterms, and now I am seeking a position for after I graduate in April 2017. If you'd like to know more about me and feel free to contact me. I look forward to meeting each other!</p>
+                    <p class="text-faded">I graduated from UBC with a degree in Computer Engineering, Specializing in Software. I became passionate about coding after I took a programming course in my first year of university and haven't looked back since. I love creating user-friendly solutions and learning new technologies. I previously worked at General Motors for the past two years as an Android Connectivity Developer on the Bluetooth team, and now I am looking for my next opportunity!</p>
                 </div>
             </div>
         </div>
@@ -246,10 +246,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <h3 class="text-success">ZE PowerGroup</h3>
-                        <p>Application Support Analyst</p>
-                        <dd align="left">- Found and resolved various bugs concerning data collection and validation</dd>
-                        <dd align="left">- Communicated efficiently with clients to provide fast solutions to their issues</dd>
+                        <h3 class="text-success">General Motors</h3>
+                        <p>Android Connectivity Developer</p>
+                        <dd align="left">- Developed new features and fixes for multiple model years of vehicles</dd>
+                        <dd align="left">- Communicated across multiple teams to work together on common goals and fixes</dd>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
